# RMASmoke

./: .gitignore  BUILDING.MD  CMakeLists.txt  Makefile  README.md  build_shim.sh  chromiumos_vm_deploy.sh  factory_install.sh  generate_protoc.sh  rmasmoke_shim.sh
buildenv/: Dockerfile  build.sh
dockerroot/: Dockerfile  init.sh
src/: esys_context.h  main.cpp  tss_context.h
