cmake_minimum_required(VERSION 3.0.0)
project(RMASmoke VERSION 0.1.0 LANGUAGES C CXX)

include(CTest)
enable_testing()
find_package(OpenSSL REQUIRED)
add_executable(rmasmoke src/main.cpp)
target_link_libraries(rmasmoke ssl crypto tss2-sys tss2-mu)
set(CPACK_PROJECT_NAME ${PROJECT_NAME})
set(CPACK_PROJECT_VERSION ${PROJECT_VERSION})
include(CPack)
